@@ -197,13 +197,36 @@ if (true === $cfg['SkipLockedTables']) {
 }
 
 if (! isset($sot_ready)) {
+
+    // Set some sorting defaults
+    $sort = 'name';
+    $sort_order = 'ASC';
+
+    if ($_REQUEST['sort']) {
+        $sortable_name_mappings = array(
+            'table'     => 'Name',
+            'records'   => 'Rows',
+            'type'      => 'Engine',
+            'collation' => 'Collation',
+            'size'      => 'Data_length',
+            'overhead'  => 'Data_free'
+        );
+
+        // Make sure the sort type is implemented
+        if ($sort = $sortable_name_mappings[$_REQUEST['sort']]) {
+            if ($_REQUEST['sort_order'] == 'DESC') {
+                $sort_order = 'DESC';
+            }
+        }
+    }
+
     if (! empty($tbl_group) && ! $cfg['ShowTooltipAliasTB']) {
         // only tables for selected group
-        $tables = PMA_DBI_get_tables_full($db, $tbl_group, true);
+        $tables = PMA_DBI_get_tables_full($db, $tbl_group, true, null, 0, false, $sort, $sort_order);
     } elseif (! empty($tbl_group) && $cfg['ShowTooltipAliasTB']) {
         // only tables for selected group,
         // but grouping is done on comment ...
-        $tables = PMA_DBI_get_tables_full($db, $tbl_group, 'comment');
+        $tables = PMA_DBI_get_tables_full($db, $tbl_group, 'comment', null, 0, false, $sort, $sort_order);
     } else {
         // all tables in db
         // - get the total number of tables
@@ -218,10 +241,10 @@ if (! isset($sot_ready)) {
              *
              * @todo Page selector for table names?
              */
-            $tables = PMA_DBI_get_tables_full($db, false, false, null, 0, false);
+            $tables = PMA_DBI_get_tables_full($db, false, false, null, 0, false, $sort, $sort_order);
         } else {
             // fetch the details for a possible limited subset
-            $tables = PMA_DBI_get_tables_full($db, false, false, null, $pos, true);
+            $tables = PMA_DBI_get_tables_full($db, false, false, null, $pos, true, $sort, $sort_order);
         }
     }
 
